@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 from itertools import chain
 from datetime import datetime
+from django.template.defaultfilters import safe
 from classytags.arguments import Argument, MultiValueArgument
 from classytags.core import Options, Tag
 from classytags.helpers import InclusionTag, AsTag
@@ -750,3 +751,25 @@ class StaticPlaceholderNode(Tag):
 
 
 register.tag(StaticPlaceholderNode)
+
+
+class RenderPlaceholder(Tag):
+    name = 'render_placeholder'
+    options = Options(
+        Argument('placeholder'),
+        Argument('width', default=None, required=False),
+        'language',
+        Argument('language', default=None, required=False),
+    )
+
+    def render_tag(self, context, placeholder, width, language=None):
+        request = context.get('request', None)
+        if not request:
+            return ''
+        if not placeholder:
+            return ''
+        if not hasattr(request, 'placeholder'):
+            request.placeholders = []
+        request.placeholders.append(placeholder)
+        return safe(placeholder.render(context, width, lang=language))
+register.tag(RenderPlaceholder)
