@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% load placeholder_tags stack_tags %}
+{% load cms_tags %}
 
 {% block content %}
-{# stack "logo" #}
+{# static_placeholder "logo" #}
 {% for example in examples %}
     <div>{% render_placeholder example.placeholder %}</div>
 {% empty %}
